@@ -29,6 +29,19 @@ public class CursorHandler extends PBasicInputEventHandler {
     public static final Cursor HAND = Cursor.getPredefinedCursor( Cursor.HAND_CURSOR );
 
     private static final CursorManager manager = new CursorManager();
+    private JComponent inside = null;
+
+    //Sets a different cursor to this CursorHandler.  If this CursorHandler is currently the one showing its cursor, immediately show
+    //the new cursor on the component
+    public void setCursor( int cursor ) {
+        this.cursor = Cursor.getPredefinedCursor( cursor );
+        if ( inside != null ) {
+
+            //If you don't change the manager.lastEntered, it will toggle back during the mouse release
+            manager.lastEntered = this.cursor;
+            inside.setCursor( this.cursor );
+        }
+    }
 
     //todo: should make 1 manager per JComponent?
     //the current implementation assumes state is global across all JPanels, may not work properly when moving from one JComponent to another
@@ -122,6 +135,7 @@ public class CursorHandler extends PBasicInputEventHandler {
 
     public void mouseEntered( PInputEvent event ) {
         manager.mouseEntered( (JComponent) event.getComponent(), cursor );
+        inside = (JComponent) event.getComponent();
     }
 
     public void mousePressed( PInputEvent event ) {
@@ -134,6 +148,7 @@ public class CursorHandler extends PBasicInputEventHandler {
 
     public void mouseExited( PInputEvent event ) {
         mouseExited( (JComponent) event.getComponent() );
+        inside = null;
     }
 
     public void mouseExited( JComponent component ) {
